x/contracts/sdk-macros/tests/ui/fail/not-pub.rs
// Copyright (C) 2024, Ava Labs, Inc. All rights reserved.
// See the file LICENSE for licensing terms.

use sdk_macros::public;

#[allow(unused_imports)]
use wasmlanche::Context;

#[public]
fn test(_: &mut Context) {}

fn main() {}
